--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             </ul>
         </div>
 
-        <div class="">
-
+        <div class="title">
+            <h1>TANDILWATCH</h1>
+            <h2>A FUTURE THAT IS WORTH IT TO FIGHT FOR</h1>
+            <h3>Team action - Free</h2>
+            <a href="#">Play Now</a>
         </div>
     </div>
 </body>
