Complete title footer platforms

--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
         </div>
 
         <div class="title">
-            <h1>TANDILWATCH</h1>
+            <h1>UNDERWATCH</h1>
             <h2>A FUTURE THAT IS WORTH IT TO FIGHT FOR</h1>
             <h3>Team action - Free</h2>
             <a href="#">Play Now</a>
         </div>
+
+        <div class="title-footer">
+            <div class="platforms">
+                <a href="#">BATTLE NET</a>
+                <a href="#">XBOX SERIES</a>
+                <a href="#">PS5</a>
+                <a href="#">NINTENDO SWITCH</a>
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
