Complete fifth container foundation

--- a/index.html
+++ b/index.html
@@ -42,6 +42,76 @@
         </div>
     </div>
 
+    <div class="second-container">
+        <div class="second-container-text">
+            <h1>A NEW ERA HAS BEGUN</h1>
+            <p>Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. Duis at tellus at urna. Nunc sed augue lacus viverra. Purus viverra accumsan in nisl nisi scelerisque eu ultrices. Volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Felis donec et odio pellentesque diam. Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div class="second-container-image">
+            <img src="" alt="character image">
+        </div>
+    
+    </div>
+
+
+    <div class="third-container">
+        <div class="third-container-text">
+            <h1>A NEW ERA HAS BEGUN</h1>
+            <p>Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. Duis at tellus at urna. Nunc sed augue lacus viverra. Purus viverra accumsan in nisl nisi scelerisque eu ultrices. Volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Felis donec et odio pellentesque diam. Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div class="third-container-image">
+            <img src="" alt="character image">
+        </div>
+    
+    </div>
+
+    <div class="fourth-container">
+        <div class="title-container">
+            <h1 style="text-align:center">NEWS</h1>
+        </div>
+
+        <div class="news-container">
+
+            <a href="">
+            <div class="news-item">
+                    <img src="" alt="news image">
+                    <p>Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra.</p>
+                </div>
+            </a>
+            <a href="">
+            <div class="news-item">
+                    <img src="" alt="news image">
+                    <p>Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra.</p>
+                </div>
+            </a>
+            <a href="">
+                <div class="news-item">
+                        <img src="" alt="news image">
+                        <p>Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra.</p>
+                </div>
+            </a>
+            <a href="">
+                <div class="news-item">
+                        <img src="" alt="news image">
+                        <p>Vel turpis nunc eget lorem dolor sed viverra ipsum nunc. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra.</p>
+                </div>
+            </a>
+        </div>
+
+        <div class="button-container">
+            <button class="news-button">SEE ALL NEWS</button>
+        </div>
+
+    </div>
+
+    <div class="fifth-container">
+        <h1>NETUS ET MALESUADA FEMES AC TURPIS. ¡EGESTAS MAECENAS PHARETRA!</h1>
+        <a href="#">PLAY NOW</a>
+    </div>
+
+
 </body>
 
 </html>
