Complete copyright section foundations

--- a/index.html
+++ b/index.html
@@ -111,7 +111,40 @@
         <a href="#">PLAY NOW</a>
     </div>
 
-
+    <div class="footer">
+        <h1>KEEP UPDATED</h1>
+        <div class="social-media-icons">
+            <p>tw</p>
+            <p>ig</p>
+            <p>fb</p>
+            <p>yt</p>
+        </div>
+        <p>Lenguaje</p>
+        <p>Blizzard icon</p>
+        <div class="footer-links">
+            <p>empleo</p>
+            <p>info</p>
+            <p>asist</p>
+            <p>contact</p>
+            <p>prensa</p>
+            <p>api</p>
+        </div>
+        <p>Todo esto en nuestra app <a href="">APP name</a></p>
+        <div class="copyright">
+            <p>© 2022 Blizzard Entertainment, Inc. Todos los derechos reservados.
+            <p>
+                Todas las marcas comerciales a las que se hace referencia son propiedad de sus respectivos dueños.
+            </p>
+            <div>
+                <p>Privacidad</p>
+                <p>Legal</p>
+                <p>Terminos</p>
+                <p>Cookies</p>
+                <p>Ajustes de cookies</p>
+                <p>api</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
